Update display logic for Dashboard and Edge statistics. Minor updates for HMD malware table.

--- a/less/modal.less
+++ b/less/modal.less
@@ -444,8 +444,9 @@
         .scan-file_Filesize,
         .scan-file_IsPE,
         .scan-file_IsPEextension,
-        .scan-file_IsVerifyTrust {
-          min-width: 120px;
+        .scan-file_IsVerifyTrust,
+        .hostIdArrCnt {
+          min-width: 140px;
           text-align: center;
         }
       }
