Update loading logic for Dashboard statistics, Tree and Data table.

--- a/less/app.less
+++ b/less/app.less
@@ -577,6 +577,11 @@ footer.footer {
           width: 0;
           padding: 0;
         }
+        span.loading {
+          display: block;
+          text-align: center;
+          margin-top: 50px;
+        }
       }
       .content {
         overflow-y: auto;
@@ -1344,6 +1349,14 @@ footer.footer {
         .table-content .table {
           height: 70vh;
           overflow-y: auto;
+          span.loading {
+            display: block;
+            text-align: center;
+            margin-top: 200px;
+            i {
+              font-size: 30px;
+            }
+          }
           .main-table {
             width: 100%;
             &.overflow-scroll {
