Add a new License page and the SCP login logic.

--- a/less/app.less
+++ b/less/app.less
@@ -502,6 +502,12 @@ footer.footer {
           overflow: hidden;
           padding-left: 10px;
           padding-right: 10px;
+          span.loading {
+            float: left;
+            width: 330px;
+            text-align: center;
+            margin-top: 25px;
+          }
           ul {
             float: left;
             width: 330px;
