--- a/less/modal.less
+++ b/less/modal.less
@@ -394,6 +394,12 @@
 /* configuration/common/alert-details */
 #dashboardModalDialog-content,
 #configScanModalDialog-content {
+  #g-progress-container {
+    .fg-loading-2 {
+      display: block;
+      text-align: center;
+    }
+  }
   .scan-info {
     overflow: hidden;
     margin-top: 10px;
@@ -416,14 +422,10 @@
             margin-right: 20px;
           }
         }
-        .pass-total,
-        .count {
+        .pass-total {
           position: absolute;
           right: 95px;
           top: 20px;
-        }
-        .count {
-          color: #d10d25;
         }
         .btn {
           position: absolute;
@@ -434,7 +436,6 @@
       }
       .table {
         overflow-y: auto;
-        margin-top: 15px;
         .gcb_CceId,
         .gcb_Type,
         .gcb_CompareResult {
@@ -799,7 +800,7 @@
         border: 1px solid #ccc !important;
       }
     }
-    &.maleware {
+    &.malware {
       width: 1070px;
     }
     thead {
@@ -822,7 +823,18 @@
     min-height: 550px;
     .info-content {
       .table {
-        height: 425px;
+        max-height: 425px;
+        min-height: 130px;
+        &.malware {
+          margin-bottom: 25px;
+        }
+        .scan-header {
+          display: block;
+          margin-bottom: 5px;
+          span {
+            margin-right: 15px;
+          }
+        }
       }
       .scan-wrapper {
         margin-top: 10px;
@@ -831,10 +843,8 @@
           .scan-header {
             display: block;
             margin-bottom: -10px;
-          }
-          .scan-content {
-            .list {
-              //max-height: 395px;
+            span {
+              margin-right: 15px;
             }
           }
         }
