--- a/less/app.less
+++ b/less/app.less
@@ -709,6 +709,11 @@ footer.footer {
         &.last {
           border-bottom: 0;
         }
+        &.issues-feedback span {
+          display: block;
+          width: 100%;
+          height: 100%;
+        }
         span {
           display: block;
           font-weight: bold;
