Add IVAR table in Dashboard. Add IVAR photo and video url in Alert dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -600,6 +600,17 @@
     margin: 7px 0;
     background-color: #f7f7f7;
     padding: 20px;
+    .ivar {
+      display: flex;
+      align-items: center;
+      img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        float: left;
+        margin-right: 25px;
+      }
+    }
   }
   .main-content {
     display: flex;
