--- a/less/app.less
+++ b/less/app.less
@@ -451,6 +451,17 @@ footer.footer {
           width: 49.32%;
           height: 460px;
         }
+        .main-table {
+          &.align-center {
+            tbody td {
+              text-align: center;
+              padding-left: 0;
+            }
+          }
+          &.overflow-scroll {
+            overflow-x: auto;
+          }
+        }
         .empty-data {
           position: relative;
           height: 458px;
