--- a/less/modal.less
+++ b/less/modal.less
@@ -608,7 +608,10 @@
         height: 100px;
         border-radius: 50%;
         float: left;
-        margin-right: 25px;
+        margin-right: 15px;
+      }
+      .msg {
+        margin-right: 15px;
       }
     }
   }
