Redirect IVA Events table to Threats page.

--- a/less/app.less
+++ b/less/app.less
@@ -458,8 +458,12 @@ footer.footer {
               padding-left: 0;
             }
           }
-          &.overflow-scroll {
-            overflow-x: auto;
+          &.ivr {
+            span {
+              color: #004d93;
+              font-weight: bold;
+              text-decoration: underline;
+            }
           }
         }
         .empty-data {
