Add statistics charts in Threats page.

--- a/less/app.less
+++ b/less/app.less
@@ -493,6 +493,15 @@ footer.footer {
         }
       }
     }
+    &.threats {
+      min-height: auto;
+      padding: 5px;
+      .charts {
+        .chart-group {
+          width: 49.3%;
+        }
+      }
+    }
     .maps {
       position: relative;
       width: 100%;
