--- a/less/app.less
+++ b/less/app.less
@@ -504,28 +504,27 @@ footer.footer {
       .c-button-group {
         margin: 5px 8px;
       }
+      .drop-down {
+        position: absolute;
+        top: 14px;
+        left: 200px;
+        width: 145px;
+      }
       .floor-map {
-        .drop-down {
-          position: absolute;
-          top: 14px;
-          left: 200px;
-          width: 145px;
-        }
-        & > .content {
-          width: 100%;
-          margin-top: 55px;
+        overflow: hidden;
+        .left-tree {
+          float: left;
+          width: 330px;
+          margin-top: 25px;
           overflow: hidden;
           padding-left: 10px;
           padding-right: 10px;
-          span.loading {
-            float: left;
-            width: 330px;
+          .empty {
+            display: block;
             text-align: center;
             margin-top: 25px;
           }
           ul {
-            float: left;
-            width: 330px;
             max-height: 77vh;
             overflow-y: auto;
             border-top: 1px solid #d9d9d9;
@@ -566,11 +565,11 @@ footer.footer {
               }
             }
           }
-          .map {
-            float: left;
-            width: 80%;
-            text-align: center;
-          }
+        }
+        .map {
+          float: left;
+          width: 80%;
+          text-align: center;
         }
       }
     }
