Add 'Source' field in Threats page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -572,9 +572,14 @@
         text-align: center;
         &.severity-level,
         &.collector,
-        &.trigger,
+        &.trigger {
+          width: 15%;
+        }
         &.datetime {
-          width: 25%;
+          width: 20%;
+        }
+        &.source {
+          width: 35%;
         }
         &.src-ip,
         &.dest-ip {
