--- a/less/app.less
+++ b/less/app.less
@@ -306,6 +306,8 @@ footer.footer {
     background-color: #fff;
   }
   .main-statistics { //For all statistics page
+    height: 79vh;
+    overflow-y: auto;
     padding: 6px;
     background-color: #d9d9d9;
     .statistics-content {
@@ -432,7 +434,8 @@ footer.footer {
     }
   }
   .main-dashboard { //For Dashboard section
-    min-height: 88vh;
+    height: 88vh;
+    overflow-y: auto;    
     padding: 15px;
     background-color: #ededed;
     .charts {
@@ -494,7 +497,7 @@ footer.footer {
       }
     }
     &.threats {
-      min-height: auto;
+      height: 78vh;
       padding: 5px;
       .charts {
         .chart-group {
