--- a/less/app.less
+++ b/less/app.less
@@ -450,6 +450,9 @@ footer.footer {
         border-radius: 5px;
         background-color: #fff;
         overflow: hidden;
+        &.full-width {
+          width: 100%;
+        }
         &.bar {
           width: 49.32%;
           height: 460px;
@@ -502,6 +505,9 @@ footer.footer {
       .charts {
         .chart-group {
           width: 49.3%;
+          &.full-width {
+            width: 100%;
+          }
         }
       }
     }
