Fix pagination error in HMD dialog. CSS styles updates for HMD.

--- a/less/app.less
+++ b/less/app.less
@@ -770,6 +770,10 @@ footer.footer {
         }
       }
     }
+    .config-notify,
+    .auto-settings {
+      overflow-y: auto;
+    }
     .parent-content {
       flex-grow: 1;
       overflow-x: auto;
@@ -1040,10 +1044,6 @@ footer.footer {
             border-top: 1px solid #ccc;
             button {
               margin: 0 5px;
-            }
-            &.no-fixed {
-              position: relative;
-              margin-top: 50px;
             }
           }
           .form-group { //For individual form group
