Make the Dashboard Maps tree as as sorted data. Update view/edit logic for Config Edge. Other QA fixes.

--- a/less/modal.less
+++ b/less/modal.less
@@ -868,6 +868,7 @@
         }
       }
       .scan-wrapper {
+        min-height: 440px;
         .scan-section {
           width: 905px;  
         }
