Minor fix on auto settings and update locales.

--- a/less/login.less
+++ b/less/login.less
@@ -5,6 +5,14 @@
     position: relative;
     background: none;
   }
+  input,
+  select {
+    color: #000;
+    border: 1px solid #ccc;
+  }
+  select {
+    border: 1px solid #d9d9d9;
+  }
   #title, #form {
     width: 400px;
   }
@@ -66,6 +74,13 @@
         color: red;
       }
     }
+    #newKey {
+      float: left;
+      margin-right: 5px;
+    }
+    .renew-key {
+      width: 145px;
+    }
     .key {
       display: inline-block;
       vertical-align: middle;
@@ -75,7 +90,7 @@
         margin-left: 10px;
       }
       button {
-        margin-left: 20px;
+        margin-left: 10px;
       }
     }
   }
