Complete logic for first time login user to create new password. Update chart for Config Syslog.

--- a/less/login.less
+++ b/less/login.less
@@ -49,6 +49,16 @@
     button {
       padding: 8px 43px;
     }
+    .first-time {
+      font-size: 15px;
+      color: #004d93;
+      text-align: right;
+      margin-top: 10px;
+      cursor: pointer;
+    }
+    .error-msg {
+      min-height: 30px;
+    }
   }
   #g-footer {
     color: #ffffff;
