--- a/less/app.less
+++ b/less/app.less
@@ -438,6 +438,14 @@ footer.footer {
           width: 49.32%;
           height: 460px;
         }
+        .main-table {
+          &.align-center {
+            tbody td {
+              text-align: center;
+              padding-left: 0;
+            }
+          }
+        }
         .empty-data {
           position: relative;
           height: 458px;
