--- a/less/modal.less
+++ b/less/modal.less
@@ -829,7 +829,7 @@
       }
       .scan-content {
         .list {
-          height: 260px;
+          max-height: 260px;
         }
       }
       .scan-wrapper {
@@ -864,7 +864,7 @@
       }
       .scan-content {
         .list {
-          height: 340px;
+          max-height: 340px;
         }
       }
       .scan-wrapper {
